# mecanumbot-ros-pkg

./: .gitignore  CMakeLists.txt  README.md  package.xml
arduino/MecanumControllerRC/: MecanumControllerRC.pde
arduino/MecanumControllerRC/.svn/: all-wcprops  entries
arduino/MecanumbotController/: MecanumbotController.ino  README.md
arduino/MecanumbotPower/: I2C_Anything.h  MecanumbotPower.ino
arduino/MecanumbotPowerTest/: I2C_Anything.h  MecanumbotPowerTest.ino
arduino/libraries/Adafruit_BMP085/: Adafruit_BMP085.cpp  Adafruit_BMP085.h
arduino/libraries/I2C/.svn/: all-wcprops  entries
arduino/libraries/I2C/examples/.svn/: all-wcprops  entries
arduino/libraries/I2C/examples/HMC5883L/.svn/: all-wcprops  entries
arduino/libraries/I2c_BMP085/: I2c_BMP085.cpp  I2c_BMP085.h
arduino/libraries/I2c_BMP085/examples/BMP085test/: BMP085test.pde
arduino/libraries/LPD8806/.svn/: all-wcprops  entries
arduino/libraries/LPD8806/examples/.svn/: all-wcprops  entries
arduino/libraries/LPD8806/examples/LEDbeltKit/.svn/: all-wcprops  entries
arduino/libraries/LPD8806/examples/LEDbeltKit_alt/.svn/: all-wcprops  entries
arduino/libraries/LPD8806/examples/longstrandtest/.svn/: all-wcprops  entries
arduino/libraries/LPD8806/examples/strandtest/.svn/: all-wcprops  entries
arduino/libraries/MD25/: MD25.cpp  README.txt  keywords.txt
arduino/libraries/MD25/.svn/: all-wcprops  entries
arduino/libraries/MD25/.svn/text-base/: MD25.cpp.svn-base  MD25.h.svn-base
arduino/libraries/MD25/datasheets/.svn/: all-wcprops  entries
arduino/libraries/MD25/datasheets/.svn/text-base/: A3950.pdf.svn-base  MD25 I2C Documentation.pdf.svn-base  MD25 Serial Documentation.pdf.svn-base
arduino/libraries/MD25/examples/.svn/: all-wcprops  entries
arduino/libraries/MD25/examples/MD25_Test/.svn/: all-wcprops  entries
arduino/libraries/MD25/examples/MD25_Test/.svn/text-base/: MD25_Test.ino.svn-base
arduino/libraries/Mecanum/: Mecanum.h  keywords.txt
arduino/libraries/Mecanum/.svn/: all-wcprops  entries
arduino/libraries/Mecanum/.svn/text-base/: Mecanum.cpp.svn-base
arduino/libraries/Mecanum/examples/.svn/: all-wcprops  entries
arduino/libraries/Mecanum/examples/Mecanum_Test/.svn/: all-wcprops  entries
arduino/libraries/Mecanum/examples/Mecanum_Test/.svn/text-base/: Mecanum_Test.ino.svn-base
arduino/libraries/Utils/: README.md  Utils.cpp  Utils.h  keywords.txt
arduino/libraries/Utils/examples/Utils_Test/: Utils_Test.ino
config/: base_local_planner_params.yaml  costmap_common_params.yaml
description/: base_laser.STL  base_link.STL  camera_link.STL  camera_supports.STL  e_stop.STL  mecanumbot-simple.urdf  mecanumbot.urdf  mid_plate_link.STL  top_plate_link.STL
docs/: Implementation Guide.md  Setup Guide.md  Todo List.md  Usage Guide.md  Work Log.md
extra/: 99-usb-serial.rules  Mecanumbot Electrical Block Diagram.vsd  Mecanumbot Velocity Calibration.xlsx  mecanumbot-rqt.perspective  mecanumbot.rviz  mecanumbot.urdf  robot_setup_1_os.sh  robot_setup_2_ros.sh  robot_setup_3_env.sh  robot_setup_4_mecanumbot.sh
launch/: ball_tracker.launch  controller.launch  core.launch  description.launch  hector_slam.launch  kinect.launch  laser.launch  move_base.launch  rqt.launch  rviz.launch  slam.launch  target_follower.launch  teleop_keyboard.launch  teleop_xbox.launch
launch/old/: gazebo.launch  teleop_wiimote.launch
maps/: hector_slam_map_apartment_downstairs.tfw  hector_slam_map_apartment_downstairs.tif  hector_slam_map_apartment_upstairs.tfw  hector_slam_map_apartment_upstairs.tif
msg/: LightControl.msg  RobotHealth.msg
src/: CloudHelpers.cpp  ball_tracker.cpp  cloud_helpers.cpp  odometry_publisher.cpp  target_average_filter.cpp  target_follower.cpp  teleop_joy.cpp  teleop_xbox.cpp
