<?xml version="1.0"?>
<package>
  <name>mecanumbot</name>
  <version>0.2.0</version>
  <description>The package to run the mecanumbot.</description>

  <maintainer email="josh@javconcepts.com">Josh Villbrandt</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/mecanumbot</url>
  <url type="website">http://javconcepts.com/tag/mecanumbot/</url>
  <author email="josh@javconcepts.com">Josh Villbrandt</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cmake_modules</run_depend>
</package>
